# Docco

./: .docco-example  .gitignore  .markdownlint.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TODO.md  conftest.py  docco.example.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
examples/: CLAUDE.md  Feature Showcase.md  Feature_Showcase.md  Full Page Table.md  Multilingual Example.md  Multilingual_Document_Example.md  basic_document.py  content.md  counter.py  document.md  footer.DE.html  footer.EN.html  footer.NL.html  footer.html  footer_multilingual.html  footer_showcase.html  get_date.py  header.DE.html  header.EN.html  header.NL.html  header.html  markdown_document.py  style.css
examples/Multilingual_Document_Example/: Multilingual_Document_Example.pot  de.po  nl.po
examples/commands/: callout.html
examples/css/: double_sided.css  fancy.css  fonts.css  header_footer.css  multiplatform.css  page.css  toc.css
examples/inline/: callout.html  inlined_content.md
examples/shared/: copyright_de.po  copyright_nl.po
examples/translations/: Multilingual_Document_Example.pot  de.po  nl.po
src/docco/: __init__.py  cli.py  config.py  context.py  core.py  directive_utils.py  frontmatter.py  header_footer.py  html.py  inline.py  language.py  logging_config.py  page_layout.py  parser.py  pdf.py  pdf_validation.py  pipeline.py  toc.py  translation.py  utils.py
src/docco/content/: commands.py  images.py  language_filter.py  markdown.py  markdown_parser.py
src/docco/core/: document.py  section.py
src/docco/plugins/: README.md  docco.toml
src/docco/plugins/diffpdf/: __init__.py  test_edgecase.py  tests.py
src/docco/plugins/diffpdf/docs/: README.md
src/docco/plugins/dpi/: __init__.py  test_edgecase.py  test_regression.py  tests.py
src/docco/plugins/dpi/docs/: README.md
src/docco/plugins/dpi/example/: docco.toml  example.md  example.toml
src/docco/plugins/html/: __init__.py  test_edgecase.py  tests.py
src/docco/plugins/html/docs/: README.md
src/docco/plugins/html/templates/: base.html
src/docco/plugins/htmlhint/: __init__.py  test_edgecase.py  tests.py
src/docco/plugins/htmlhint/docs/: README.md
src/docco/plugins/htmlhint/example/: example.md  example.toml
src/docco/plugins/inline/: __init__.py  test_edgecase.py  test_regression.py  tests.py
src/docco/plugins/inline/docs/: README.md
src/docco/plugins/inline/example/: example.md  example.toml  inline.md  inline_html.html  inline_nested.md
src/docco/plugins/page/: __init__.py  test_edgecase.py  test_regression.py  tests.py
src/docco/plugins/page/docs/: README.md
src/docco/plugins/page/example/: example.md
src/docco/plugins/page/scripts/: landscape_handler.js
src/docco/plugins/page/styles/: page.css  pagedjs_screen.css
src/docco/plugins/page_bg/: __init__.py  test_edgecase.py  test_regression.py  tests.py
src/docco/plugins/page_bg/docs/: README.md
src/docco/plugins/page_bg/example/: example.md
src/docco/plugins/pdf/: __init__.py  tests.py
src/docco/plugins/pdf/docs/: README.md
src/docco/plugins/pdf/scripts/: rendering_complete.js
src/docco/plugins/pdf2svg/: __init__.py  test_edgecase.py  test_regression.py  tests.py
src/docco/plugins/pdf2svg/docs/: README.md
src/docco/plugins/pdf2svg/example/: example.md  example.toml
src/docco/plugins/toc/: __init__.py  test_edgecase.py  test_regression.py  tests.py  tests_integration.py
src/docco/plugins/toc/docs/: README.md
src/docco/plugins/toc/example/: docco.toml  example.md  example.toml
src/docco/plugins/toc/scripts/: create_toc.js  toc_handler.js
src/docco/plugins/translation/: __init__.py  test_edgecase.py  test_regression.py  tests.py
src/docco/plugins/translation/docs/: README.md
src/docco/plugins/translation/example/: copyright_de.po  copyright_nl.po  docco.toml  example.md  example.toml  example_DE.po  example_NL.po  terms.po
src/docco/plugins/upload/: __init__.py  test_edgecase.py
src/docco/plugins/upload/docs/: README.md
src/docco/plugins/urls/: __init__.py  tests.py
src/docco/plugins/urls/docs/: README.md
src/docco/plugins/vars/: __init__.py  test_edgecase.py  tests.py
src/docco/plugins/vars/docs/: README.md
src/docco/plugins/vars/example/: example.md  example.toml
src/docco/rendering/: css_builder.py  headers_footers.py  html_builder.py  pdf_renderer.py
src/docco/templates/: base.html
tests/: conftest.py  test_cli.py  test_cli_html.py  test_complexity.py  test_config.py  test_context.py  test_frontmatter.py  test_header_footer.py  test_html.py  test_inline.py  test_language.py  test_logging_config.py  test_page_layout.py  test_parser.py  test_pdf.py  test_pdf_validation.py  test_pipeline.py  test_regression.py  test_ruff.py  test_toc.py  test_translation.py  test_translation_integration.py  test_utils.py
tests/assets/: docco.toml  multiplatform.css
tests/fixtures/: .docco  args.py  error.py  footer_simple.html  header_multi_placeholder.html  header_simple.html  header_with_file_placeholder.html  inline_target.md  multilingual.md  nested.py  nested_inline_1.md  nested_inline_2.md  placeholder.html  simple.html  simple.md  simple.py  unknown.txt  with_frontmatter.md
tests/integration/: test_document.py  test_markdown_document.py  test_pdf_generation.py  test_regression.py
tests/output/: Feature_Showcase.html  Feature_Showcase_intermediate.md  Multilingual_Document_Example.html  Multilingual_Document_Example.pot  Multilingual_Document_Example_DE.html  Multilingual_Document_Example_DE.md  Multilingual_Document_Example_DE_intermediate.md  Multilingual_Document_Example_EN.html  Multilingual_Document_Example_EN.md  Multilingual_Document_Example_EN_intermediate.md  Multilingual_Document_Example_NL.html  Multilingual_Document_Example_NL_intermediate.md  Multilingual_Document_Example_intermediate.md
tests/unit/: test_cli.py  test_commands.py  test_headers_footers.py  test_html_builder.py  test_images.py  test_language_filter.py  test_markdown.py  test_markdown_parser.py  test_section.py
