[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docco"
version = "0.1.0"
description = "Convert Markdown files with YAML frontmatter and CSS stylesheets to professional A4 PDFs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Justus Rijke", email = "justusrijke@gmail.com"}
]
dependencies = [
    "markdown-it-py==4.0.0",
    "mdit-py-plugins==0.5.0",
    "pyyaml==6.0.3",
    "python-frontmatter==1.1.0",
    "weasyprint==67.0; sys_platform != 'win32'",
    "translate-toolkit==3.17.4",
    "colorlog==6.10.1",
    "polib==1.2.0",
    "pymupdf==1.26.7",
    "pillow==12.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest",
    "radon",
    "diffpdf",
]

[project.scripts]
docco = "docco.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/docco --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
omit = ["src/docco/cli.py", "src/docco/logging_config.py"]

[tool.ruff]
fix = true
target-version = "py310"