[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "docco"
dynamic = ["version"]
description = "Convert Markdown files with YAML frontmatter and CSS stylesheets to professional A4 PDFs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Justus Rijke", email="justusrijke@gmail.com"}]
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]

dependencies = [
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "pyyaml>=6.0.3",
    "python-frontmatter>=1.1.0",
    "weasyprint==67.0; sys_platform != 'win32'",
    "translate-toolkit>=3.17.4",
    "colorlog>=6.10.1",
    "polib>=1.2.0",
    "pymupdf>=1.26.7",
    "pillow>=12.0.0",

    # Add a lower bound for unpinned transitive dependencies
    "cffi>=2.0.0",
    "pycparser>=2.21",
    "ply>=3.11"
]

[project.urls]
Homepage = "https://github.com/JustusRijke/Docco"
Issues = "https://github.com/JustusRijke/Docco/issues"

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-cov>=6",
    "ruff>=0.10",
    "diffpdf>=1.0.0",
    "ty>=0.0.8",
]

[project.scripts]
docco = "docco.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docco"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

# Pytest configuration. More info: https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
[tool.pytest]
strict = true
testpaths = ["tests"]
filterwarnings = ["error"] # Treat all warnings as errors (e.g., deprecation warnings)
addopts = [
    "-v", # Verbose output
    "--cov", # Enable coverage 
    "--cov-branch", # Make sure to cover every decision branch
    "--cov-report=term-missing", # Report which lines aren't covered
    "--cov-report=xml", # Dump to XML for Codecov
]

# Ruff configuration. More info: https://docs.astral.sh/ruff/configuration/
[tool.ruff.lint]
extend-select = [
    "I", # Sort imports
    "ANN", # Enforce type annotations
    "PT", # Common style issues or inconsistencies with pytest-based tests
    # Available rulesets: https://docs.astral.sh/ruff/rules/
]

[tool.ruff.lint.isort]
combine-as-imports = true # Combines "as" imports on the same line

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"] # Do not enforce type annotations for tests
